@@ -43,12 +43,15 @@ E</A><P>
       supported.
       <p>
       This is a small dockapp, which shows the core temperature and cpu
-      frequency from 2 upto 4 cores/cpus and the temperature of upto two ACPI
+      frequency from 2 upto 4 cores/cpus and the temperature of upto two
       thermal zones, which are normaly the motherboard temperature.
       <p>
       All cpus, which are supported by the linux kernel "coretemp" and "cpufreq"
       modules, could be monitored.  f.e. core 2, atom and core iX.
-
+      <p>
+      All thermal zones which could be read from files are supported.  f.e.
+      ACPI through /sys/class/thermal/thermal_zoneX/temp or hardware sensors
+      through /sys/devices/platform/<chip>/tempX_input.
       <P>
       Only libxcb (X C-language Bindings library) and the standard C library
       are as external libraries required.
