@@ -1,5 +1,9 @@
 User johns
 
+Date Fri Sep 17 14:28:03 CEST 2010
+
+    Added support for hardware sensor thermal zones.
+
 Date Tue Sep 14 15:09:32 CEST 2010
 
     Added man page.
